# human-design

./: .dockerignore  .geocode_cache.json  .gitignore  64keys_chart_example.html  64keys_list_page.html  64keys_main_page.html  64keys_pure_svg.html  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.transcribe  MEMORY_ACADEMY_DEPLOYMENT.md  Makefile  README.md  SEED_64keys_findings_review.json  SEED_64keys_reverse_engineering.json  SEED_channel_formation.json  SEED_color_palette.json  SEED_hd_ontology_json.json  SEED_ontology_codegen.json  SEED_ontology_refinement.json  SEED_type_authority_profile.json  VISUALIZATION_DEMO.md  bg_example.html  bodygraph_examples.json  bodygraph_rendered.html  bodygraph_template_rendered.html  bodygraph_visualization.html  create_sample_visualization.py  example_render_bodygraph.py  example_template_render.py  execute_64keys_backup.py  execute_64keys_geometry_extraction.py  execute_64keys_reverse_engineering.py  execute_agent_training.py  execute_bodygraph_endpoint.py  execute_bodygraph_endpoint_enhanced.py  execute_bodygraph_geometry_extraction.py  execute_bodygraph_svg_generator.py  execute_channel_formation.py  (+35 more)
.devcontainer/: devcontainer.json
.dodo/: signposting_tracker.json
.github/: copilot-instructions.md
.github/agents/: 64keys-explorer.md  data-miner.md
.github/prompts/: ask-ra.prompt.md  findPersonOrGenerateData.prompt.md  get-chart.prompt.md  summarize-ra-transcript.prompt.md
.github/workflows/: deploy.yml
cdk/: README.md  app.py  cdk.context.json  cdk.json  human_design_stack.py  transcribe_stack.py  transcription_api_stack.py
data/: tags.json
docs/: ACCESSIBILITY_REPORT_wcag_validation.md  ADR-001-api-layer-architecture.md  ADR-002-bodygraph-visualization-architecture.md  CODEGEN_DESIGN.md  COLOR_PALETTE_USAGE.md  COORDINATION_SYNTHESIS.md  COORDINATOR_SYNTHESIS_HD_ONTOLOGY.md  COORDINATOR_SYNTHESIS_agent_training_audit.md  COORDINATOR_SYNTHESIS_bodygraph_visualization.md  COORDINATOR_SYNTHESIS_bodygraph_visualization_comprehensive.md  COORDINATOR_SYNTHESIS_d3_visualization_implementation.md  COORDINATOR_SYNTHESIS_dodo_extraction.md  COORDINATOR_SYNTHESIS_rebecca_energy_palette.md  COORDINATOR_SYNTHESIS_training_enhancement_audit.md  DESIGN_RATIONALE_rebecca_energy_colors.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_NOTES_ontology.md  ONTOLOGY_SYNTHESIS_REPORT.md  ONTOLOGY_USAGE.md  ROADMAP_semantic_layer.md  SEMANTIC_EXTENSION_GUIDE.md  SYNTHESIS_CODEGEN_APPROACH.md  actionable-enhancements.md  agent-training-synthesis.md  bodygraph-visualization-implementation-guide.md  gate-zodiac-mapping.md  github-actions-setup.md  memorize-the-64-gates-critique.md  memorize-the-64-gates-revised.md  memorize-the-64-gates.md
docs/architecture/: ADR_semantic_adapter_layer.md
docs/conversations/: 2026-01-30-rebecca-feedback-session.md
docs/synthesis/: COORDINATOR_SYNTHESIS.md  COORDINATOR_SYNTHESIS_64keys_implementation_specs.md  COORDINATOR_SYNTHESIS_type_authority_profile_implementation.md  ONTOLOGY_ADAPTER_SYNTHESIS.md
examples/: composite_demo.py  transit_demo.py
lambda/: handler.py
ontology/: COLOR_PALETTE_rebecca_energy.json  COLOR_PALETTE_schema.json  HD_ONTOLOGY_complete.json  generate_ontology.py
ra_transcripts/: INFRASTRUCTURE.md  index.json  knowledge-base.md  todos.md
scripts/: test_strand_tools.py  verify_tool_registration.py
src/human_design/: __init__.py  api.py  api_client.py  bodygraph.yaml  calculate_utils.py  centers.yaml  channels.yaml  cli.py  gates_data.py  hexagrams.yaml
src/mcp_server_64keys/: __init__.py  server.py  session.py
src/mcp_server_pdf/: __init__.py  extractors.py  ocr.py  server.py  workers.py
src/mcp_server_ra/: __init__.py  aws_batch_worker.py  server.py  workers.py
src/transcription_service/: __init__.py  auth.py  batch.py  database.py  main.py  models.py  s3.py
strand-results/active/: AGENT__hemn_space.md  AGENT__token_usage.md  AGENT_coordinator.md  AGENT_fair_witness.md  AGENT_ontologist.md  AGENT_researcher.md  CHANNEL_coordinator.md  CHANNEL_fair_witness.md  CHANNEL_implementer.md  CHANNEL_test_engineer.md  CODEBASE_RESEARCH.md  CODEGEN_architect.md  CODEGEN_coordinator.md  COLOR_coordinator.md  COLOR_fair_witness.md  COORDINATION_SYNTHESIS.md  D3_SPECIALIST_IMPLEMENTATION_PLAN.md  D3_SPECIALIST_REFINED.py  D3_SPECIALIST_REFINEMENT_ANALYSIS.md  D3_SPECIALIST_REFINEMENT_SUMMARY.md  IMPLEMENTER_TRAINING.md  ONTOLOGY_coordinator.md  ONTOLOGY_fair_witness.md  ONTOLOGY_ontologist.md  REFINE_coordinator.md  REFINE_fair_witness.md  REFINE_ontologist.md  SPEC_architect.md  SPEC_coordinator.md  SPEC_fair_witness.md  SPEC_ontologist.md  STRAND_64keys_reverse_engineering_0ec5bda2.json  STRAND_64keys_reverse_engineering_372eb77e.json  STRAND_64keys_reverse_engineering_3f0f38f7.json  STRAND_64keys_reverse_engineering_9dbc90e1.json  STRAND_channel_formation_479a1313.json  STRAND_color_palette_9ebfa9ad.json  STRAND_hd_ontology_d380b69d.json  STRAND_ontology_codegen_7b972024.json  STRAND_ontology_refinement_4993e41b.json  (+6 more)
strand-results/seeds/: SEED_64keys_data_backup.yaml  SEED_agent_self_audit_fix.yaml  SEED_agent_training_audit.yaml  SEED_agent_training_validation_comprehensive.yaml  SEED_d3_specialist_refinement.yaml  SEED_d3_test_visualization.yaml  SEED_dodo_extraction.yaml  SEED_high_priority_api.yaml  SEED_medium_priority_visualization.yaml  SEED_ontology_adapter_audit.yaml  SEED_training_python_agent_refine.yaml  (+2 more)
tests/: __init__.py  test_api.py  test_api_operations.py  test_bodygraph_endpoint.py  test_calculate_utils.py  test_channel_formation.py  test_cli.py  test_composite.py  test_main.py  test_models_bodygraph.py  test_models_coordinates.py  test_models_core.py  test_models_summaries_64keys.py  test_repository.py  test_storage_models.py  test_transcription_auth.py  test_transcription_batch.py  test_transcription_database.py  test_transcription_models.py  test_transcription_s3.py  test_transit.py  test_type_authority.py
visualizations/: bodygraph_sample_data.py
(+81 files in other folders)
